Fix label and clear alignment using flex-direction

--- a/src/components/dropdown.css
+++ b/src/components/dropdown.css
@@ -6,6 +6,7 @@
 .upperOfInput {
   display: flex;
   justify-content: space-between;
+  flex-direction: row-reverse;
 }
 
 label {
@@ -15,10 +16,6 @@ label {
 
 sup {
   color: red;
-}
-.clear {
-  position: absolute;
-  right: 1.5rem;
 }
 
 input {
